--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,10 +1,11 @@
 <% if @book.errors.any? %>
-  <div id="error_explanation" class="alert alert-danger">
-    <ul>
-      <% @book.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-    </ul>
+  <div id="error_explanation">
+    <h3><%= @book.errors.count %>error prohibited this obj from being saved:</h3>
+	  <ul>
+        <% @book.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
   </div>
 <% end %>
 
