--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -31,15 +31,27 @@
 
 			<tbody>
 				<% @books.each do |book| %>
-				<tr>
+				  <tr>
 					<td>
-						<%= link_to user_path(book.user) do %>
-							<%= attachment_image_tag(book.user, :profile_image, :fill, 50, 50, fallback: "no-image-mini.jpg") %>
-						<% end %>
+					  <%= link_to user_path(book.user) do %>
+					    <%= attachment_image_tag(book.user, :profile_image, :fill, 50, 50, fallback: "no-image-mini.jpg") %>
+					  <% end %>
 					</td>
 					<td><%= link_to book.title, book_path(book), class: "book_#{book.id}" %></td>
 					<td><%= book.body %></td>
-				</tr>
+					<td>
+				      <% if current_user.already_favorited?(book) %>
+                        <%= link_to book_favorites_path(book), method: :delete do %>
+                          <i class="fas fa-heart"></i>
+                        <% end %>
+                      <% else %>
+                        <%= link_to book_favorites_path(book), method: :post do %>
+                          <i class="far fa-heart"></i>
+                        <% end %>
+                      <% end %>
+                      <%= book.favorites.count %>
+                    </td>
+                  </tr>
 				<% end %>
 			</tbody>
 		</table>
