--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-<div class="row">
+  <div class="row">
 	<div class="col-xs-3">
 
 		<h2>User info</h2>
@@ -23,14 +23,41 @@
 					</td>
 					<td><%= link_to @book.title, book_path(@book) %></td>
 					<td><%= @book.body %></td>
+                    <td>
+				      <% if current_user.already_favorited?(@book) %>
+                        <%= link_to book_favorites_path(@book), method: :delete do %>
+                          <i class="fas fa-heart"></i>
+                        <% end %>
+                      <% else %>
+                        <%= link_to book_favorites_path(@book), method: :post do %>
+                          <i class="far fa-heart"></i>
+                        <% end %>
+                      <% end %>
+                      <%= @book.favorites.count %>
+                    </td>
 					 <% if @book.user == current_user %>
 					<td><%= link_to "Edit", edit_book_path(@book), class: "btn-sm btn-success edit_book_#{@book.id}" %></td>
 					<td><%= link_to "Destroy", book_path(@book), method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn-sm btn-danger destroy_book_#{@book.id}" %></td>
 					<% end %>
 				</tr>
 			</table>
-
+<tr>
+<% @comments.each do |c| %>
+  <td><%= attachment_image_tag c.user, :profile_image_id, :fill, 100, 100, fallback: "no_image.jpg", format: 'jpeg' %></td>
+  <td><%= c.content %></td>
+    <% if c.user == current_user %>
+    <td><%= link_to "Destroy", book_comment_path(c.book.id, c.id), method: :delete, data: {confirm: "本当に削除してもよろしいですか？"} %><br></td>
+    <% else %>
+      <td><br></td>
+  <% end %>
+  <td><%= c.user.name %><br></td>
+<% end %>
+</tr>
+<%= form_for [@book, @comment] do |f| %>
+  <%= f.text_area :content, placeholder: "コメントをここに" %>
+  <%= f.submit "送信する" %>
+<% end %>
 	</div>
-</div>
+  </div>
 </div>
 
