--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -49,7 +49,8 @@
                           <i class="far fa-heart"></i>
                         <% end %>
                       <% end %>
-                      <%= book.favorites.count %>
+                      <td><%= book.favorites.count %></td>
+                      <td>コメント数<%= book.comments.count %></td>
                     </td>
                   </tr>
 				<% end %>
