--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -33,7 +33,8 @@
                           <i class="far fa-heart"></i>
                         <% end %>
                       <% end %>
-                      <%= @book.favorites.count %>
+                      <td><%= @book.favorites.count %></td>
+                      <td>コメント数<%= @book.comments.count %></td>
                     </td>
 					 <% if @book.user == current_user %>
 					<td><%= link_to "Edit", edit_book_path(@book), class: "btn-sm btn-success edit_book_#{@book.id}" %></td>
