--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -16,3 +16,17 @@
 <div class="row">
 	<%= link_to '', edit_user_path(user), class: "col-xs-12 btn btn-default glyphicon glyphicon-wrench edit_user_#{user.id}" %>
 </div>
+
+<p><%=link_to "フォロー", follows_user_path(user) %></p>
+<p><%=link_to "フォロワー", followers_user_path(user) %></p>
+
+<% if current_user != user %>
+  <% if user.followed_by?(current_user) %>
+    <p><%=link_to "フォロー済み", user_relationships_path(user.id), method: :delete %></p>
+  <% else %>
+    <p><%=link_to "フォローする", user_relationships_path(user.id), method: :post %></p>
+  <% end %>
+<% end %>
+
+<td>フォロー数<%= user.followings.count %></td>
+              <td>フォロワー数<%= user.followers.count %></td>
