--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -20,14 +20,27 @@
 
 	<tbody>
 		<% @users.each do |user| %>
-		<tr>
+		  <tr>
 			<td><%= attachment_image_tag(user, :profile_image, :fill, 50, 50, fallback: "no-image-mini.jpg") %></td>
 			<td><%= user.name %></td>
 			<td><%= link_to "Show", user_path(user), class: "user_#{user.id}" %></td>
-		</tr>
+			<td>
+			  <% if current_user != user %>
+                <% if user.followed_by?(current_user) %>
+                  <p><%=link_to "フォロー済み", user_relationships_path(user.id), method: :delete %></p>
+                <% else %>
+                  <p><%=link_to "フォローする", user_relationships_path(user.id), method: :post %></p>
+                <% end %>
+              <% end %>
+              <td>フォロー数<%= user.followings.count %></td>
+              <td>フォロワー数<%= user.followers.count %></td>
+            </td>
+		  </tr>
 		<% end %>
 	</tbody>
 </table>
+
+
 <!--users一覧 -->
 
 </div></div></div>
