--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,6 +25,11 @@ header .navbar-left span {
 	padding-top: 10px;
 }
 
+.seach {
+  	padding-top: 15px;
+  	text-align:center;
+}
+
 body {
 	margin-top: 40px;
 }
