--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -44,7 +44,7 @@
 			</table>
 <tr>
 <% @comments.each do |c| %>
-  <td><%= attachment_image_tag c.user, :profile_image_id, :fill, 100, 100, fallback: "no_image.jpg", format: 'jpeg' %></td>
+  <td><%= attachment_image_tag c.user, :profile_image, :fill, 100, 100, fallback: "no_image.jpg", format: 'jpeg' %></td>
   <td><%= c.content %></td>
     <% if c.user == current_user %>
     <td><%= link_to "Destroy", book_comment_path(c.book.id, c.id), method: :delete, data: {confirm: "本当に削除してもよろしいですか？"} %><br></td>
