--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,14 +35,16 @@
       </div>
     </header>
 
-<div class="seach">
-      <%= form_tag(search_path, :method => 'get') do %>
-        <%= select_tag(:option, options_for_select([["user", "1"],["book","2"]]))%>
-        <%= select_tag(:choice, options_for_select([["部分一致", "1" ],["後方一致", "2" ],["前方一致", "3" ],["完全一致", "4" ]])) %>
-        <%= text_field_tag :search %>
-        <%= submit_tag 'Search', :name => nil , :title => nil %>
-      <% end %>
-    </div>
+    <% if user_signed_in? %>
+      <div class="seach">
+        <%= form_tag(search_path, :method => 'get') do %>
+          <%= select_tag(:option, options_for_select([["user", "1"],["book","2"]]))%>
+          <%= select_tag(:choice, options_for_select([["部分一致", "1" ],["後方一致", "2" ],["前方一致", "3" ],["完全一致", "4" ]])) %>
+          <%= text_field_tag :search %>
+          <%= submit_tag 'Search', :name => nil , :title => nil %>
+        <% end %>
+      </div>
+    <% end %>
 
     <%= yield %>
 
