--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,11 +2,9 @@
   <div class="row">
 	<div class="col-xs-3">
 
-		<h2>User info</h2>
 		<%= render 'users/profile', user: @user %>
 
-		<h2>New book</h2>
-		<%= render 'books/newform', book: @book %>
+		<%= render 'books/newform', book: @booknew %>
 
 	</div>
 
