--- a/app/views/books/_comment.html.erb
+++ b/app/views/books/_comment.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [@book, @comment], remote: true do |f| %>
+<%= form_with(model: [book, comment], remote: true) do |f| %>
   <%= f.text_area :content, placeholder: "コメントをここに" %>
   <%= f.submit "送信する" %>
 <% end %>
