--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,17 +3,33 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <!--name表示の追加-->
+  <!-- ====================name=================================== -->
   <div class="field">
     <%= f.label :name %><br />
     <%= f.text_field :name, autofocus: true, class: "name" %>
   </div>
-  <!--name表示の追加-->
+  <!-- =========================================================== -->
 
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, class: "email" %>
   </div>
+
+  <!-- ====================JpPrefecture導入=================================== -->
+  <div class="field">
+    <%= f.label :postal_code %><br />
+    <%= f.text_field :postal_code, autofocus: true, class: "postal_code", id: "address_zipcode" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :prefecture_code %><br>
+    <%= f.collection_select :prefecture_code, JpPrefecture::Prefecture.all, :name, :name, class: "address" %><br>
+    <%= f.label :City %><br>
+    <%= f.text_field :city, autofocus: true, class: "address", id:"address_city" %><br>
+    <%= f.label :Street %><br>
+    <%= f.text_field :street, autofocus: true, class: "address", id: "address_street" %><br>
+  </div>
+  <!-- ======================================================================= -->
 
   <div class="field">
     <%= f.label :password %>
