--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <script src="https://kit.fontawesome.com/8f8aa2dd98.js" crossorigin="anonymous"></script>
+    <script src="http://maps.google.com/maps/api/js?key=AIzaSyA8OH8yD3VsLUYjw3HBUQms--IOrHRXR4w&language=ja"></script>
   </head>
 
   <body>
