--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -39,3 +39,40 @@
 </div>
 </div>
 
+<!-- ====================Map表示=================================== -->
+<script type="text/javascript">
+  function initMap() {
+    // latitude,longitudeから位置を特定
+    var test ={lat: <%= @user.latitude %>, lng: <%= @user.longitude %>};
+    var map = new google.maps.Map(document.getElementById('map'), {
+              zoom: 15,
+              center: test
+              });
+    var transitLayer = new google.maps.TransitLayer();
+    transitLayer.setMap(map);
+
+    var contentString = '住所：<%= @user.address %>';
+    var infowindow = new google.maps.InfoWindow({
+      content: contentString
+    });
+
+ // Map上の指定した位置にピンを挿して表示する
+    var marker = new google.maps.Marker({
+                  position:test,
+                  map: map,
+                  title: contentString
+                 });
+
+     marker.addListener('click', function() {
+       infowindow.open(map, marker);
+     });
+  }
+</script>
+
+<script async defer
+  src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyA8OH8yD3VsLUYjw3HBUQms--IOrHRXR4w&callback=initMap">
+</script>
+
+<!-- mapの表示 -->
+<div id="map"></div>
+<!-- ============================================================= -->
