--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -70,7 +70,7 @@
 </script>
 
 <script async defer
-  src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyA8OH8yD3VsLUYjw3HBUQms--IOrHRXR4w&callback=initMap">
+  src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=   apikey    &callback=initMap">
 </script>
 
 <!-- mapの表示 -->
