--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,7 @@
 		<%= render 'users/profile', user: @user %>
 
 		<%= render 'books/newform', book: @book %>
+		<td><%= link_to "Destroy", user_path(@user), method: :delete, data: {confirm: "本当に削除してもよろしいですか？"} %></td>
 	</div>
 
 	<div class="col-xs-9">
@@ -29,7 +30,7 @@
 					</td>
 					<td><%= link_to book.title, book_path(book), class: "book_#{book.id}" %></td>
 					<td><%= book.body %></td>
-					                      <td>コメント数<%= book.comments.count %></td>
+					<td>コメント数<%= book.comments.count %></td>
 				</tr>
 				<% end %>
 			</tbody>
